<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TableLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="fill_parent">

        <TableRow android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/location_label"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:labelFor="@+id/location"
            android:text="@string/location_label"
            android:layout_weight="2"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:textStyle="bold"
            style="@style/big_label_text" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:singleLine="false"
            android:gravity="center_vertical" />

        <ImageButton
            android:id="@+id/selectPointOfInterest"
            android:contentDescription="@string/location_info"
            android:src="@android:drawable/ic_dialog_map"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/yellow_button"
            android:layout_margin="20dp" />

    </TableRow>

        <TableRow android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:text="Description:"
                android:gravity="bottom"
                android:textStyle="bold"
                style="@style/big_label_text" />

        </TableRow>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:hint="@string/description_hint"
            android:gravity="center_vertical"
            android:layout_weight="2" />

        <TableRow android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/organizer_label"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:labelFor="@+id/organizer_input"
                android:text="@string/organised_by"
                android:gravity="center_vertical"
                android:textStyle="bold"
                style="@style/big_label_text" />

            <EditText
                android:id="@+id/organizer_input"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:singleLine="true"
                android:inputType="text"
                android:gravity="center_vertical" />

        </TableRow>

        <TableRow android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/startsAt_label"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:singleLine="true"
                android:labelFor="@+id/startsAt"
                android:text="@string/starts_at"
                android:gravity="center_vertical"
                android:textStyle="bold"
                style="@style/big_label_text" />

            <TextView
                android:id="@+id/startsAt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:singleLine="false"
                android:gravity="center_vertical" />

            <ImageButton
                android:id="@+id/setStartsAt"
                android:contentDescription="@string/ends_at"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/yellow_button"
                android:layout_margin="20dp" />

        </TableRow>

        <TableRow android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/endsAt_label"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:singleLine="true"
                android:labelFor="@+id/endsAt"
                android:text="@string/ends_at"
                android:gravity="center_vertical"
                android:textStyle="bold"
                style="@style/big_label_text" />

            <TextView
                android:id="@+id/endsAt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:singleLine="false"
                android:gravity="center_vertical" />

            <ImageButton
                android:id="@+id/setEndsAt"
                android:contentDescription="@string/ends_at"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/yellow_button"
                android:layout_margin="20dp" />

        </TableRow>

        <Button
            android:id="@+id/save"
            android:contentDescription="@string/save"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/save"
            android:drawableRight="@android:drawable/ic_menu_save"
            android:background="@drawable/yellow_button"
            style="@style/big_label_text"
            android:layout_weight="3"
            android:height="60dp"
            android:layout_margin="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp" />

    </TableLayout>

</LinearLayout>