<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="fill_parent">

        <TableRow android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.hackathon.playground.app.view.DropShadowImageView
                android:id="@+id/thumbnail"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:contentDescription="@string/thumbnail"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/placeOfInterestName"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    style="@style/big_label_text" />

                <TableRow android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/show_playdates_label"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:text="@string/show_playdates"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        style="@style/big_label_text" />

                    <ImageButton
                        android:id="@+id/show_playdates_btn"
                        android:contentDescription="@string/search"
                        android:src="@android:drawable/ic_menu_search"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/yellow_button"
                        android:layout_marginRight="20dp" />

                </TableRow>

                <TableRow android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/yelpRatingLabel"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:text="@string/yelp_rating"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        style="@style/big_label_text" />

                    <TextView
                        android:id="@+id/yelpRating"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:layout_margin="20dp" />

                </TableRow>

                <TableRow android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/isOpen"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                </TableRow>

            </LinearLayout>


        </TableRow>

    </TableLayout>

    <FrameLayout
        android:id="@+id/amenities_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>